# blockhead_fx

./: .gitmodules  CMakeLists.txt  README.md
filter/: CMakeLists.txt
filter/src/: 1-pole.cpp  1-pole.h  2-pole.cpp  2-pole.h  2-pole_peak.cpp  2-pole_peak.h  filter_handle.cpp  filter_handle.h  filter_type.h  module.cpp
lofi/: CMakeLists.txt
lofi/src/: lofi.cpp  lofi.h  module.cpp
reverb/: CMakeLists.txt
reverb/src/: module.cpp  reverb.cpp  reverb.h
ringmod/: CMakeLists.txt
ringmod/src/: module.cpp  ringmod.cpp  ringmod.h
saturator/: CMakeLists.txt
saturator/src/: module.cpp  saturator.cpp  saturator.h
zap/: CMakeLists.txt
zap/src/: module.cpp  zap.cpp  zap.h
